# Letter-Value-Sum

./: .gitignore  CMakeLists.txt  README.md  letter_value_sum  main.cpp
src/: Wordlist.cpp  Wordlist.h  chronoTimer.cpp  chronoTimer.h  letterCalc.cpp  letterCalc.h  main.cpp  userInteractions.cpp  userInteractions.h  wordlist.cpp  wordlist.h
src/structures/: helperStructures.h
